# serde-byte-array

./: CHANGELOG.md  Cargo.toml  README.md
src/: bytearray.rs  de.rs  lib.rs  ser.rs
tests/: test_derive.rs  test_serde.rs
