[package]
name = "serde-byte-array"
version = "0.1.2"
authors = ["Nitrokey GmbH <info@nitrokey.com>"]
categories = ["encoding", "no-std"]
description = "Optimized handling of `[u8; N]` for Serde"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nitrokey/serde-byte-array"
edition = "2021"
rust-version = "1.56"

[dependencies]
serde = { version = "1.0.152", default-features = false }

[dev-dependencies]
bincode = "1.3.3"

serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_test = "1.0.152"
